Ensure button borders are visible for white backgrounds.

--- a/assets/page.scss
+++ b/assets/page.scss
@@ -120,7 +120,10 @@ main section {
 	background: $blue;
 	color: white;
 
-	&:focus { box-shadow: inset 0 0 0 .2rem white, 0 0 0 .2rem $blue; }
+	outline-offset: 0.2rem;
+	-moz-outline-radius: 7px;
+
+	&:focus { outline: 1px dashed $blue; }
 }
 
 .link-button {
@@ -315,24 +318,16 @@ textarea.budget-input {
 		margin-right: 1rem;
 		vertical-align: middle;
 
-		-moz-outline-radius: 3px;
 		outline-offset: 0.2rem;
+		-moz-outline-radius: 3px;
 
-		&:focus { outline: 1px dashed rgba(white, 0.8); }
+		&:focus { outline: 1px dashed currentcolor; }
 	}
 
-	.pages {
-		display: inline-block;
-		margin-left: 2rem;
-
-		li { display: inline-block; }
-	}
-	
-	.pages a,
 	.account a,
 	.account button {
 		border-radius: 0.3rem;
-		border: 1px solid transparent;
+		border: 1px dashed transparent;
 		font-size: 1.5rem;
 		display: inline-block;
 		padding: 0 1rem;
@@ -340,18 +335,15 @@ textarea.budget-input {
 		background: transparent;
 		height: 3rem;
 
-		&.selected {
-			color: $blue;
-			background-color: white;
-			font-weight: bold;
-		}
-
 		&:focus {
 			outline: none;
-			border: 1px dashed rgba(white, 0.8);
+			border-color: currentcolor;
 		}
 
-		&:hover { border-color: white; }
+		&:hover {
+			border-style: solid;
+			border-color: currentcolor;
+		}
 
 		&.selected:focus {
 			border: 1px dashed $blue;
@@ -390,7 +382,7 @@ textarea.budget-input {
 		outline-offset: 0.2rem;
 		-moz-outline-radius: 2px;
 
-		&:focus { outline: 1px dashed white; }
+		&:focus { outline: 1px dashed currentcolor; }
 	}
 }
 
@@ -410,7 +402,7 @@ textarea.budget-input {
 		outline-offset: 0.2rem;
 		-moz-outline-radius: 2px;
 
-		&:focus { outline: 1px dashed white; }
+		&:focus { outline: 1px dashed currentcolor; }
 	}
 
 	menu {
